--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,6 @@
 @import 'bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons.css';
+/* @import '~mdb-ui-kit/css/mdb.min.css'; */
 
 /* @tailwind base;
 @tailwind components;
